updated images on selections.html

--- a/about.html
+++ b/about.html
@@ -59,10 +59,12 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="chef-image">
-                        <img src="images/Charles_Amherst.png" alt="photo of Charles Amherst">
+                        <div class="img-wrapper">
+                            <img class="inner-img" src="images/Charles_Amherst.png" alt="chef-image">
+                        </div>
+                        <figcaption>Fig.1 - Charles Amherst, Owner/Chef.</figcaption>
                     </div>
                 </div>
-                <figcaption>Fig.1 - Charles Amherst, Owner/Chef.</figcaption>
                 <div class="col-lg-8">
                     <div class="about-chef">
                         <h3>Charles Amherst, owner/chef</h3>
@@ -80,23 +82,26 @@
 
                         <p>Chaz 51 Steakhouse is a community jewel combining gourmet selections in a comfortable local setting.  Chaz 51 can accommodate an intimate dinner for two, four, or large parties.  Private special celebrations can be held in the separate function room.  Thank you for choosing to dine at Chaz 51 Steakhouse.  It is our pleasure to serve you, and please share your experience with your family and friends.</p>
                     </div>
+
+                    <div class="keyframe-effect mt-5">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row align-items-center text-center">
+                <div class="col-lg-4">
                     <div class="footer-logo">
                         <a href="index.html">
                             <img src="images/logo.svg" alt="Logo">
                         </a>
                     </div>
                 </div>
-            
-                <div class="col-lg-3">
+
+                <div class="col-lg-4">
                     <div class="footer-contact">
                         <h3>Contact Info</h3>
                         <ul>
