--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,8 @@
                             <label>Comment</label>
                             <textarea name="comment" rows="3" class="form-control comment-field" required></textarea>
                         </div>
+                    </div>
+                    
                     <input type="submit" name="submit" class="submit-btn" value="Submit">
                 </form>
             </div>
@@ -104,16 +106,16 @@
 
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row align-items-center text-center">
+                <div class="col-lg-4">
                     <div class="footer-logo">
                         <a href="index.html">
                             <img src="images/logo.svg" alt="Logo">
                         </a>
                     </div>
                 </div>
-        
-                <div class="col-lg-3">
+
+                <div class="col-lg-4">
                     <div class="footer-contact">
                         <h3>Contact Info</h3>
                         <ul>
