--- a/index.html
+++ b/index.html
@@ -20,8 +20,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-   
-    <!-- Google Analytics - Global Site Tag (gtag.js) -->
+
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Web Developer">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Angular, ReactJs">
+    <meta name="description" content="A quality oriented Full Stack Web-Developer with 5+ years of working experience!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.azharmughal.com/">
+    <meta property="og:title" content="Web Developer">
+    <meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+    <meta property="og:image" content="https://www.azharmughal.com/assets/images/featured-lines.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.azharmughal.com//">
+    <meta property="twitter:title" content="Web Developer">
+    <meta property="twitter:description" content="A quality oriented Full Stack Web-Developer with 5+ years of working experience!">
+    <meta property="twitter:image" content="https://www.azharmughal.com/assets/images/featured-lines.svg">
+
+
+     <!-- Google Analytics - Global Site Tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C4MDG7SHK4"></script>
 
     <script>
@@ -62,7 +83,7 @@
         </nav>
     </header>
     <section class="hero_image">
-        <img src="images/hero_image.png" alt="People at bar" class="w-100">
+        <img src="images/hero_image.png" alt="hero_image" class="w-100">
     </section>
 
     <section class="intro">
@@ -89,8 +110,8 @@
 
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row align-items-center text-center">
+                <div class="col-lg-4">
                     <div class="footer-logo">
                         <a href="index.html">
                             <img src="images/logo.svg" alt="Logo">
@@ -98,7 +119,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <div class="footer-contact">
                         <h3>Contact Info</h3>
                         <ul>
