added pdf of menu files on selections.html

--- a/selections.html
+++ b/selections.html
@@ -54,10 +54,11 @@
 
     <section class="selections">
         <h2>Our Selections</h2>
+        <p> We are currently updating our menu. Please check back to view our full offerings. You may also contact us or stop by to see our current menu."</p>
         <div class="container">
             <div class="our-selections">
                 <div class="selection-box">
-                    <a href="#">
+                    <a href="Lounge Menu Design Web.pdf">
                         <div class="img-container position-relative">
                             <img src="images/chaz_fries.jpg" class="w-100" alt="green bean fries">
                             <div class="feature-gradient"></div>
@@ -66,13 +67,13 @@
                     </a>
                 </div>
                 <div class="selection-box">
-                    <a href="#">
+                    <a href="After Dinner Menu  Web Version.pdf">
                         <img src="images/chaz_steak.jpg class="feature-border-radius w-100" alt="steak dinner and wine">
                         <h3>Dinner Menu</h3>
                     </a>
                 </div>
                 <div class="selection-box">
-                    <a href="#">
+                    <a href="Chaz 51 Wine Menu V3 choice.pdf">
                         <img src="images/chaz_wine.jpg" class="feature-box-shadow w-100" alt="wine bottle and glass">
                         <h3>Wine Menu</h3>
                     </a>
